Ajout des chemins patch, delete et get (user par ID) et mise à jour de la doc Swagger (+pokemon.controller).
