# src/users/users.router.ts
@@ -7,16 +7,25 @@ import { Router } from 'express';
 
 import  {
     getUsers,
+    getUserId,
     createUser,
-    loginUser
+    loginUser,
+    updateUser,
+    deleteUser
 } from './users.controller';
 
 export const userRouter = Router();
 
 // --- Configuration des routes -----------------------------------
-userRouter.get('/', getUsers)
+userRouter.get('/', getUsers);
+
+userRouter.get('/:userId', getUserId);
 
 userRouter.post('/', createUser);
 
 userRouter.post('/login', loginUser);
+
+userRouter.patch('/:userId', updateUser);
+
+userRouter.delete('/:userId', deleteUser);
 // ----------------------------------------------------------------
